--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
